# cabbycards

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-06-29-18-19-13_initial_schema.py  2026-06-29-20-52-54_add_password_reset_tokens.py  2026-06-29-21-08-34_allocation_model.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  cards.py  collection.py  decks.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  auth_identity.py  base.py  card.py  collection.py  deck.py  email_verification_token.py  enums.py  holding.py  location.py  password_reset_token.py  user.py
backend/app/schemas/: auth.py  card.py  collection.py  deck.py
backend/app/services/: auth.py  card_search.py  deck_builder.py  email.py  inventory.py  scryfall.py  turnstile.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_card_search.py  test_cards_api.py  test_collection_api.py  test_conftest_isolation.py  test_deck_builder_service.py  test_deck_validation.py  test_decks_api.py  test_email.py  test_enums.py  test_integration_db.py  test_inventory_service.py  test_password_reset_api.py  test_password_reset_service.py  test_scryfall_query.py  test_scryfall_service.py  test_security.py  test_turnstile.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
ios/: README.md
(+32 files in other folders)
